Switch from Hamcrest to AssertJ